--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ const welcomeText = document.getElementById("welcome");
 const sprache = document.getElementById("sprache");
 
 const welcomeMap = {
-  "Deutsch": "Willkommen! Wie kann ich dir helfen?",
+  "Deutsch": "Willkommen bei CyrixAI! Dein 24/7 Assistent ist bereit. 🤖",
   "English": "Welcome! How can I assist you?",
   "Español": "¡Bienvenido! ¿Cómo puedo ayudarte?",
   "العربية": "مرحبًا! كيف يمكنني مساعدتك؟",
